--- a/src/app/pages/notifications/notifications.page.html
+++ b/src/app/pages/notifications/notifications.page.html
@@ -10,7 +10,7 @@
 
 
 <ion-content class="main" >
-  <div *ngIf="noticeamount > 0" class="flex-center3" style=" background: none; ">
+  <div *ngIf="noticeamount > 0" class="flex-center3">
     <ion-button  color="light" size="default"  (click)="clearNotifications()">Clear All</ion-button>
   </div>
     
