--- a/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.scss
+++ b/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.scss
@@ -37,11 +37,11 @@ ion-icon.inactive {
 }
 
 ion-progress-bar {
-    --progress-background: #457b9d;
+    //--progress-background: #457b9d;
 }
 
 .add-icon {
-    color: #E63946;
+    //color: #E63946;
 }
 
 .add-icon:hover {
@@ -66,8 +66,8 @@ ion-progress-bar {
 }
 
 .exercise-button {
-    background-color: #E63946;
-    color: #fff;
+    //background-color: #E63946;
+    //color: #fff;
     border: none;
     border-radius: 5px;
     padding: 10px 20px;
@@ -77,7 +77,7 @@ ion-progress-bar {
   }
   
   .exercise-button:hover {
-    background-color: #457b9d;
+    //background-color: #457b9d;
   }
 
   .completed {
