--- a/src/app/pages/workout-tracking/workout-tracking.page.scss
+++ b/src/app/pages/workout-tracking/workout-tracking.page.scss
@@ -4,7 +4,7 @@ ion-content {
 }
 
 .form-container {
-  background-color: #A8DADC;
+  //background-color: #A8DADC;
   border-radius: 25px;
   padding: 20px;
   width: 80%;
@@ -38,19 +38,19 @@ input, select {
 }
 
 .submit{
-  --background: #E63946;
-  --color: white;
+  //--background: #E63946;
+  //--color: white;
 }
 
 .adder{
-  --background: #457B9D;
-  --color: white;
+  //--background: #457B9D;
+  //--color: white;
 }
 
 .heading-container h2 {
   font-size: 1.4rem;
   font-weight: 100;
-  color:  #E63946; 
+  //color:  #E63946;
 }
 
 .image-container {
@@ -83,11 +83,11 @@ input[formControlName="duration"] {
 }
 
 ion-toolbar{
-  --background: #E63946
+  //--background: #E63946
 }
 
 ion-toolbar ion-item{
-  --background: #E63946
+  //--background: #E63946
 }
 
 .larger-back-button {
