--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -166,8 +166,8 @@
     --ion-color-step-200: #3f4c62;
     --ion-color-step-250: #525e72;
     --ion-color-step-300: #667082;
-    --ion-color-step-350: #7b8393;
-    --ion-color-step-400: #9097a4;
+    --ion-color-step-350: #00081a;
+    --ion-color-step-400: #001b34;
     --ion-color-step-450: #737373;
     --ion-color-step-500: #808080;
     --ion-color-step-550: #8c8c8c;
