--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -205,40 +205,41 @@
    */
 
   .md body[color-theme="dark"] {
-    --ion-background-color: #121212;
-    --ion-background-color-rgb: 18,18,18;
+    --ion-background-color: #010a1b;
+    --ion-background-color-rgb: 0,0,0;
 
-    --ion-text-color: #ffffff;
+    --ion-text-color: #4185ff;
     --ion-text-color-rgb: 255,255,255;
 
-    --ion-border-color: #222222;
+    --ion-color-step-50: #001b34;
+    --ion-color-step-100: #172a43;
+    --ion-color-step-150: #2b3b52;
+    --ion-color-step-200: #3f4c62;
+    --ion-color-step-250: #525e72;
+    --ion-color-step-300: #667082;
+    --ion-color-step-350: #00081a;
+    --ion-color-step-400: #001b34;
+    --ion-color-step-450: #737373;
+    --ion-color-step-500: #808080;
+    --ion-color-step-550: #8c8c8c;
+    --ion-color-step-600: #999999;
+    --ion-color-step-650: #a6a6a6;
+    --ion-color-step-700: #b3b3b3;
+    --ion-color-step-750: #bfbfbf;
+    --ion-color-step-800: #cccccc;
+    --ion-color-step-850: #d9d9d9;
+    --ion-color-step-900: #e6e6e6;
+    --ion-color-step-950: #f2f2f2;
 
-    --ion-color-step-50: #1e1e1e;
-    --ion-color-step-100: #2a2a2a;
-    --ion-color-step-150: #363636;
-    --ion-color-step-200: #414141;
-    --ion-color-step-250: #4d4d4d;
-    --ion-color-step-300: #595959;
-    --ion-color-step-350: #656565;
-    --ion-color-step-400: #717171;
-    --ion-color-step-450: #7d7d7d;
-    --ion-color-step-500: #898989;
-    --ion-color-step-550: #949494;
-    --ion-color-step-600: #a0a0a0;
-    --ion-color-step-650: #acacac;
-    --ion-color-step-700: #b8b8b8;
-    --ion-color-step-750: #c4c4c4;
-    --ion-color-step-800: #d0d0d0;
-    --ion-color-step-850: #dbdbdb;
-    --ion-color-step-900: #e7e7e7;
-    --ion-color-step-950: #f3f3f3;
+    --ion-item-background: #010a1b;
 
-    --ion-item-background: #1e1e1e;
-
-    --ion-toolbar-background: #1f1f1f;
-
-    --ion-tab-bar-background: #1f1f1f;
-
-    --ion-card-background: #1e1e1e;
+    --ion-card-background: #001b34;
+    --ion-toolbar-background: #001b34;
+    --ion-item-background: #001b34;
+    --ion-tab-bar-background: #001b34;
+    --ion-tab-bar-border-color: #010a1b;
+    --ion-tab-bar-color: #ffffff;
+    --ion-item-divider-color: #010a1b;
+    --ion-modal-background-color: #001b34;
   }
 //}
