--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -192,6 +192,46 @@
     --ion-modal-background-color: #001b34;
   }
 
+
+.ios body[color-theme="light"] {
+  --ion-background-color: #ffffff;
+  --ion-background-color-rgb: 0,0,0;
+
+  --ion-text-color: #2990e0;
+
+  --ion-color-step-50: #001b34;
+  --ion-color-step-100: #172a43;
+  --ion-color-step-150: #2b3b52;
+  --ion-color-step-200: #3f4c62;
+  --ion-color-step-250: #525e72;
+  --ion-color-step-300: #667082;
+  --ion-color-step-350: #00081a;
+  --ion-color-step-400: #001b34;
+  --ion-color-step-450: #737373;
+  --ion-color-step-500: #808080;
+  --ion-color-step-550: #8c8c8c;
+  --ion-color-step-600: #999999;
+  --ion-color-step-650: #a6a6a6;
+  --ion-color-step-700: #b3b3b3;
+  --ion-color-step-750: #bfbfbf;
+  --ion-color-step-800: #cccccc;
+  --ion-color-step-850: #d9d9d9;
+  --ion-color-step-900: #e6e6e6;
+  --ion-color-step-950: #f2f2f2;
+
+  --ion-item-background: #010a1b;
+
+  --ion-card-background: #133c56;
+  --ion-card-text-color: #ffffff;
+  --ion-toolbar-background: #133c56;
+  --ion-item-background: #133c56;
+  --ion-tab-bar-background: #133c56;
+  --ion-tab-bar-border-color: #133c56;
+  --ion-tab-bar-color: #ffffff;
+  --ion-item-divider-color: #010a1b;
+  --ion-modal-background-color: #001b34;
+}
+
   .ios ion-modal {
     --ion-background-color: var(--ion-color-step-100);
     --ion-toolbar-background: var(--ion-color-step-150);
