Light mode progress

--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -161,7 +161,8 @@
                   <ion-card-title>
                     <ion-icon name="watch-outline"></ion-icon>
                   </ion-card-title>
-                 Explorer!
+                     <ion-label>Explorer!</ion-label>
+
                  </ion-card-content>
                 </ion-card>
               </ion-col>
