--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -195,9 +195,8 @@
 
 .ios body[color-theme="light"] {
   --ion-background-color: #ffffff;
-  --ion-background-color-rgb: 0,0,0;
 
-  --ion-text-color: #2990e0;
+  --ion-text-color: #ffffff;
 
   --ion-color-step-50: #001b34;
   --ion-color-step-100: #172a43;
@@ -219,17 +218,18 @@
   --ion-color-step-900: #e6e6e6;
   --ion-color-step-950: #f2f2f2;
 
-  --ion-item-background: #010a1b;
 
-  --ion-card-background: #133c56;
-  --ion-card-text-color: #ffffff;
-  --ion-toolbar-background: #133c56;
-  --ion-item-background: #133c56;
-  --ion-tab-bar-background: #133c56;
-  --ion-tab-bar-border-color: #133c56;
+  --ion-item-background: #274c77;
+
+  --ion-card-background: #274c77;
+  --ion-toolbar-background: #274c77;
+  --ion-item-background: #274c77;
+  --ion-tab-bar-background: #274c77;
+  --ion-tab-bar-border-color: #274c77;
   --ion-tab-bar-color: #ffffff;
-  --ion-item-divider-color: #010a1b;
-  --ion-modal-background-color: #001b34;
+  --ion-item-divider-color: #274c77;
+  --ion-modal-background-color: #274c77;
+  --ion-label-color: #ffffff;
 }
 
   .ios ion-modal {
