Light mode progress(Still needs work)

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -19,7 +19,7 @@
 
 
     <ion-item lines="none" class="clickable">
-      <ion-icon name="log-out-outline" class="menu-icons"></ion-icon>
+      <ion-icon name="moon-outline" class="menu-icons"></ion-icon>
       <ion-toggle class="menu-label" (ionChange)="onToggletheme($event)" [(ngModel)]="darkmode">
         Dark Mode
       </ion-toggle>
