--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -51,12 +51,12 @@ ion-item {
 ion-title {
     text-align: center;
     ion-chip {
-        background-color: transparent;
+        //background-color: transparent;
     }
 }
 
 .menu-icons {
-    color: #457b9d;
+    //color: #457b9d;
 }
 
 .name {
