--- a/src/app/pages/search/group/group.component.scss
+++ b/src/app/pages/search/group/group.component.scss
@@ -40,9 +40,9 @@ ion-row {
 
 .header {
     ion-icon {
-        color: #E63946;
+        //color: #E63946;
     }
-    color: #E63946;
+    //color: #E63946;
     text-decoration: solid;
     text-shadow: 0px 2px 10px;
     font-size: x-large;
@@ -56,7 +56,7 @@ ion-buttons {
 }
 
 .view-button {
-    color: #E63946;// #457b9d; #
+    //color: #E63946;// #457b9d; #
 }
 
 .overflow-hidden {
