--- a/src/app/pages/groups/group-home-page/group-home-page.component.html
+++ b/src/app/pages/groups/group-home-page/group-home-page.component.html
@@ -39,7 +39,7 @@
             <ion-img [src]="selectedGroup.profileURL"></ion-img>
           </ion-avatar>
         </div>
-        <ion-label class="profile-label" style="color: white">
+        <ion-label class="profile-label">
           <div class="name">
             <h1>{{selectedGroup.displayName}}</h1>
           </div>
