--- a/src/app/pages/groups/group-home-page/group-home-page.component.scss
+++ b/src/app/pages/groups/group-home-page/group-home-page.component.scss
@@ -4,7 +4,7 @@
     // border-bottom-right-radius: 24px;
     padding: 10px;
     // background: #A8DADC;
-    background: #E63946;
+    // background: #E63946;
     position: relative;
 }
 
@@ -37,9 +37,9 @@ ion-title {
     text-align: center;
 }
 
-ion-avatar {
-    background-color: white;
-}
+// ion-avatar {
+//     background-color: white;
+// }
 
 ion-segment {
     border-radius: 0px;
