--- a/src/app/pages/messages/messages.page.html
+++ b/src/app/pages/messages/messages.page.html
@@ -28,7 +28,8 @@
 
             <div class="zero-content-container" *ngIf="chatFriends.length === 0">
               <div class="inner-zero-content-wrapper">
-                <ion-icon class="large-icon" name="person"></ion-icon><br>
+                <!-- <ion-icon class="large-icon" name="person"></ion-icon> -->
+                <ion-icon name="chatbubbles" class="large-icon"></ion-icon><br>
                 <ion-text>
                   You don't have any chats at the moment.
                 </ion-text>
