--- a/src/global.scss
+++ b/src/global.scss
@@ -49,6 +49,10 @@ ion-card {
     --background: var(--background-color);
 }
 
+ion-modal {
+    background-color: var(--background-color);
+}
+
 .larger-back-button {
     --padding-start: 12px; 
     --padding-end: 12px; 
