--- a/src/app/pages/notifications/notifications.page.scss
+++ b/src/app/pages/notifications/notifications.page.scss
@@ -30,6 +30,7 @@
 .Mcard{
 
     //background-color:rgb(249, 253, 254);
+    padding: 10px;
     
     
 }
@@ -40,10 +41,11 @@
 }
 .Bcard{
     //background-color:rgb(249, 253, 254);
+    color: #ffffff;
 }
 .Bcard2{
     //background-color:rgb(249, 253, 254);
-    //color: #E63946;
+    color: #428cff;
 }
 
 .ion-icon1{
@@ -84,6 +86,7 @@
     --background: transparent;
     font-size: 17px;
     --border-color: transparent;
+    
 }
 
   
