--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -236,7 +236,7 @@
   --ion-item-background: var(--background-color);
   --ion-tab-bar-background: var(--background-color);
   --ion-tab-bar-border-color: var(--background-color);
-  --ion-tab-bar-color: #0077ff;
+  --ion-tab-bar-color: var(--primary-color);
   --ion-item-divider-color: var(--background-color);
   --ion-modal-background-color: var(--background-color);
   --ion-label-color: var(--primary-color);
