--- a/src/global.scss
+++ b/src/global.scss
@@ -24,6 +24,7 @@
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
+// @import "theme/variables.scss";
 // @import "theme/colortheme.scss";
 
 
@@ -262,5 +263,5 @@ html {
 }
 
 canvas {
-    // background-color: var(--background-color);
+    --background: var(--background-color);
 }
