--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -59,7 +59,7 @@
             .line {
                 flex: 1;
                 height: 1px;
-                // background-color: #ccc;
+                background-color: #ccc;
                 margin: 0 10px;
             }
               
