--- a/src/app/pages/fitnessgoals/goalcard/goalcard.component.html
+++ b/src/app/pages/fitnessgoals/goalcard/goalcard.component.html
@@ -32,7 +32,7 @@
                     <ion-icon name="speedometer-outline"></ion-icon><ion-text class="schedule-value">{{(goal.progress!)}}% Done</ion-text><br>
                     <ion-icon name="alert-circle-outline"></ion-icon><ion-text class="schedule-value">{{getDaysleft(goal)}} Days Left</ion-text><br>
                     <ion-icon name="american-football-outline"></ion-icon><ion-text class="schedule-value">{{goal.Tasks!.length}} Tasks</ion-text><br>
-                    <ion-icon name="calendar-outline"></ion-icon><ion-text class="schedule-value">Started: {{goal.startDate}}</ion-text><br>
+                    <ion-icon name="calendar-outline"></ion-icon><ion-text class="schedule-value">Start: {{goal.startDate}}</ion-text><br>
                     <ion-icon name="alarm-outline"></ion-icon><ion-text class="schedule-value">Ending: {{goal.endDate}}</ion-text><br>
                 </div>
             </ion-card-content>
