--- a/src/app/pages/goalview/goalview.page.html
+++ b/src/app/pages/goalview/goalview.page.html
@@ -29,7 +29,7 @@
       </ion-item>
       <ion-item lines = "none">
         <ion-label position="stacked"><h2 style="font-weight: bold">End date</h2></ion-label>
-        <ion-input type="date" formControlName="end" min="{{tommorow}}"></ion-input>
+        <ion-input type="date" formControlName="end" min="{{starteddate}}"></ion-input>
       </ion-item>
 
       <form [formGroup]="TaskForm">
