--- a/src/app/pages/healthdata/healthdata.page.html
+++ b/src/app/pages/healthdata/healthdata.page.html
@@ -22,37 +22,61 @@
 
   <form [formGroup]="healthDataForm" *ngIf="!isLoading" (ngSubmit)="saveHealthData()">
     <ion-list class="centered">
-      <ion-item class="full-width">
-        <div class="input-field">
-          <ion-label class="customlabel">Height (cm)</ion-label>
-          <ion-input formControlName="height" type="text"></ion-input>
-        </div>
-      </ion-item>
 
-      <ion-item class="full-width">
-        <div class="input-field">
-          <ion-label class="customlabel">Weight (kg)</ion-label>
-          <ion-input formControlName="weight" type="text"></ion-input>
-        </div>
-      </ion-item>
+        <ion-grid>
+            <ion-row>
+              <ion-item>
+                <ion-col size="6">
+                  <ion-item class="full-width" lines="none">
+                    <div class="input-field">
+                      <ion-label class="customlabel">Height (cm)</ion-label>
+                      <ion-input formControlName="height" type="number"></ion-input>
+                    </div>
 
-      <ion-item class="full-width">
-        <div class="input-field">
-          <ion-label class="customlabel">Gender</ion-label>
-          <ion-select formControlName="gender">
-            <ion-select-option value="Male">Male</ion-select-option>
-            <ion-select-option value="Female">Female</ion-select-option>
-            <ion-select-option value="Prefer not to say">Prefer not to say</ion-select-option>
-          </ion-select>
-        </div>
-      </ion-item>
-      
-      <ion-item class="full-width">
-        <div class="input-field">
-          <ion-label class="customlabel">Age</ion-label>
-          <ion-input formControlName="age" type="text"></ion-input>
-        </div>
-      </ion-item>      
+                  </ion-item>
+                </ion-col>
+
+                <ion-col size="6">
+                  <ion-item class="full-width" lines="none">
+                    <div class="input-field">
+                      <ion-label class="customlabel">Weight (kg)</ion-label>
+                      <ion-input formControlName="weight" type="text"></ion-input>
+                    </div>
+
+
+                  </ion-item>
+
+                </ion-col>
+              </ion-item>
+            </ion-row>
+          <ion-row>
+            <ion-item>
+              <ion-col size="6">
+                <ion-item class="full-width" lines="none">
+                  <div class="input-field">
+                    <ion-label class="customlabel">Sex</ion-label>
+                    <ion-select formControlName="gender">
+                      <ion-select-option value="Male">Male</ion-select-option>
+                      <ion-select-option value="Female">Female</ion-select-option>
+                      <ion-select-option value="Prefer not to say">Prefer not to say</ion-select-option>
+                    </ion-select>
+                  </div>
+                </ion-item>
+              </ion-col>
+
+              <ion-col size="6">
+                <ion-item class="full-width" lines="none">
+                  <div class="input-field">
+                    <ion-label class="customlabel">Age</ion-label>
+                    <ion-input formControlName="age" type="text"></ion-input>
+                  </div>
+                </ion-item>
+              </ion-col>
+            </ion-item>
+          </ion-row>
+
+        </ion-grid>
+
 
       <ion-item class="full-width">
         <div class="input-field">
@@ -94,6 +118,42 @@
             </select>
         </div>
       </ion-item>
+      <ion-grid>
+        <ion-row>
+            <ion-note color="danger" *ngIf="healthDataForm.get('weight')?.hasError('required')" class="error-message">
+              *Weight is required.
+            </ion-note>
+            <ion-note color="danger" *ngIf="healthDataForm.get('weight')?.hasError('min') || healthDataForm.get('weight')?.hasError('max')" class="error-message">
+              *Please a valid weight in kg
+            </ion-note>
+        </ion-row>
+        <ion-row>
+            <ion-note color="danger" *ngIf="healthDataForm.get('height')?.hasError('required')" class="error-message">
+              *Height is required.
+            </ion-note>
+            <ion-note color="danger" *ngIf="healthDataForm.get('height')?.hasError('min') || healthDataForm.get('height')?.hasError('max')" class="error-message">
+              *Please a valid height in cm
+            </ion-note>
+        </ion-row>
+        <ion-row>
+            <ion-note color="danger" *ngIf="healthDataForm.get('age')?.hasError('required')" class="error-message">
+              *Age is required.
+            </ion-note>
+            <ion-note color="danger" *ngIf="healthDataForm.get('age')?.hasError('min')" class="error-message">
+              *you must be at least 16 years old
+            </ion-note>
+            <ion-note color="danger" *ngIf="healthDataForm.get('age')?.hasError('max')" class="error-message">
+              *you must be at most 130 years old
+            </ion-note>
+        </ion-row>
+        <ion-row>
+            <ion-note color="danger" *ngIf="!healthDataForm.valid">
+              *Please fill in all the fields
+            </ion-note>
+        </ion-row>
+
+
+      </ion-grid>
 
 
       <ion-button class="submit"  expand="block" type="submit" [disabled]="!healthDataForm.valid" (click)="startBeating()">Submit</ion-button>
