--- a/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.html
+++ b/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.html
@@ -17,7 +17,7 @@
     </ion-row>
     <ion-row>
       <ion-col>
-        <ion-item>
+        <ion-item lines = "none">
           <ion-label position="stacked" style="font-size:x-large">Time</ion-label>
           <ion-input type="time" [(ngModel)]="schedule.time" [min]="getMinTime()" (ionChange)="valueChanged($event)"></ion-input>
         </ion-item>
@@ -25,7 +25,7 @@
     </ion-row>
     <ion-row>
       <ion-col>
-        <ion-item>
+        <ion-item lines = "none">
           <ion-label position="stacked" style="font-size:x-large">Date</ion-label>
           <ion-input type="date" [(ngModel)]="schedule.date" [min]="getMinDate()" (ionChange)="valueChanged($event)"></ion-input>
         </ion-item>
@@ -33,7 +33,7 @@
     </ion-row>        
     <ion-row>
       <ion-col>
-        <ion-item>
+        <ion-item lines = "none">
           <ion-label position="stacked" style="font-size: x-large">Location</ion-label>
           <div class="wrapper">
             <div class="input">
@@ -48,7 +48,7 @@
     </ion-row>    
     <ion-row>
       <ion-col>
-        <ion-item>
+        <ion-item lines = "none">
           <ion-label position="stacked" style="font-size:x-large">Duration (min)</ion-label>
           <ion-input type="number" [(ngModel)]="schedule.duration" placeholder="Enter workout duration in minutes" [min]="10" (ionChange)="valueChanged($event)"></ion-input>
         </ion-item>
@@ -56,11 +56,16 @@
     </ion-row>
     <ion-row>
       <ion-col>
-        <ion-item>
+        <ion-item lines = "none">
           <ion-label position="stacked" style="font-size:x-large">Workout Name</ion-label>
           <ion-input type="text" [(ngModel)]="schedule.name" placeholder="Enter the name of the workout"  autofocus="false" (ionChange)="valueChanged($event)"></ion-input>
         </ion-item>
       </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-note *ngIf="!isValidInput()" color="danger">
+        *Please fill all the fields
+      </ion-note>
     </ion-row>
     <ion-row>
       <ion-col>
