--- a/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.html
+++ b/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.html
@@ -18,6 +18,14 @@
     <ion-row>
       <ion-col>
         <ion-item lines = "none">
+          <ion-label position="stacked" style="font-size:x-large">Workout Name</ion-label>
+          <ion-input type="text" [(ngModel)]="schedule.name" placeholder="Enter the name of the workout"  autofocus="false" (ionChange)="valueChanged($event)"></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-item lines = "none">
           <ion-label position="stacked" style="font-size:x-large">Time</ion-label>
           <ion-input type="time" [(ngModel)]="schedule.time" [min]="getMinTime()" (ionChange)="valueChanged($event)"></ion-input>
         </ion-item>
@@ -48,23 +56,20 @@
     </ion-row>    
     <ion-row>
       <ion-col>
-        <ion-item lines = "none">
+        <ion-item lines="none">
           <ion-label position="stacked" style="font-size:x-large">Duration (min)</ion-label>
-          <ion-input type="number" [(ngModel)]="schedule.duration" placeholder="Enter workout duration in minutes" [min]="10" (ionChange)="valueChanged($event)"></ion-input>
+          <ion-input type="number" [(ngModel)]="schedule.duration" placeholder="Enter workout duration in minutes" (ionChange)="valueChanged($event)"></ion-input>
         </ion-item>
+
       </ion-col>
     </ion-row>
-    <ion-row>
-      <ion-col>
-        <ion-item lines = "none">
-          <ion-label position="stacked" style="font-size:x-large">Workout Name</ion-label>
-          <ion-input type="text" [(ngModel)]="schedule.name" placeholder="Enter the name of the workout"  autofocus="false" (ionChange)="valueChanged($event)"></ion-input>
-        </ion-item>
-      </ion-col>
-    </ion-row>
+
     <ion-row>
       <ion-note *ngIf="!isValidInput()" color="danger">
         *Please fill all the fields
+      </ion-note>
+      <ion-note *ngIf="!IsvalidDuration()" color="danger">
+        *Duration should be greater than 10 minutes
       </ion-note>
     </ion-row>
     <ion-row>
