--- a/src/app/pages/workout-tracking/workout-tracking.page.html
+++ b/src/app/pages/workout-tracking/workout-tracking.page.html
@@ -22,35 +22,46 @@
         <div formArrayName="exercises" *ngFor="let exercise of exercises.controls; index as i">
           <div class="exercise-number">Exercise {{ i + 1 }}</div>
           <div [formGroupName]="i">
-            <select formControlName="name" placeholder="name" (change)="exerciseSelected($event, i)">
-              <option value="" hidden selected >Select an exercise</option>
-              <option value="Barbell Curls">Barbell Curls</option>
-              <option value="Barbell Rows">Barbell Rows</option>
-              <option value="Bench Presses">Bench Presses</option>
-              <option value="Bicep Curls">Bicep Curls</option>
-              <option value="Burpees">Burpees</option>
-              <option value="Calf Raises">Calf Raises</option>
-              <option value="Chest Press">Chest Press</option>
-              <option value="Crunches">Crunches</option>
-              <option value="Deadlifts">Deadlifts</option>
-              <option value="Dumbbell Rows">Dumbbell Rows</option>
-              <option value="Jumping Jacks">Jumping Jacks</option>
-              <option value="Leg Curls">Leg Curls</option>
-              <option value="Leg Presses">Leg Presses</option>
-              <option value="Lunges">Lunges</option>
-              <option value="Planks">Planks</option>
-              <option value="Pull-Ups">Pull-Ups</option>
-              <option value="Push-Ups">Push-Ups</option>
-              <option value="Seated Cable Rows">Seated Cable Rows</option>
-              <option value="Sit-Ups">Sit-Ups</option>
-              <option value="Squats">Squats</option>
-              <option value="Stretches">Stretches</option>
-              <option value="Tricep Curls">Tricep Curls</option>
-            </select>
-            <input formControlName="sets" placeholder="Sets" *ngIf="hasSets(i)"/>
-            <input formControlName="reps" placeholder="Repetitions" *ngIf="hasReps(i)"/>
-            <input formControlName="weight" placeholder="Weight (kg)" *ngIf="hasWeight(i)"/>
-            <input formControlName="duration" placeholder="Duration (min)" />
+            <ion-item lines="none">
+              <ion-select formControlName="name" placeholder="Select an exercise" (change)="exerciseSelected($event, i)">
+                <ion-select-option value="Barbell Curls">Barbell Curls</ion-select-option>
+                <ion-select-option value="Barbell Rows">Barbell Rows</ion-select-option>
+                <ion-select-option value="Bench Presses">Bench Presses</ion-select-option>
+                <ion-select-option value="Bicep Curls">Bicep Curls</ion-select-option>
+                <ion-select-option value="Burpees">Burpees</ion-select-option>
+                <ion-select-option value="Calf Raises">Calf Raises</ion-select-option>
+                <ion-select-option value="Chest Press">Chest Press</ion-select-option>
+                <ion-select-option value="Crunches">Crunches</ion-select-option>
+                <ion-select-option value="Deadlifts">Deadlifts</ion-select-option>
+                <ion-select-option value="Dumbbell Rows">Dumbbell Rows</ion-select-option>
+                <ion-select-option value="Jumping Jacks">Jumping Jacks</ion-select-option>
+                <ion-select-option value="Leg Curls">Leg Curls</ion-select-option>
+                <ion-select-option value="Leg Presses">Leg Presses</ion-select-option>
+                <ion-select-option value="Lunges">Lunges</ion-select-option>
+                <ion-select-option value="Planks">Planks</ion-select-option>
+                <ion-select-option value="Pull-Ups">Pull-Ups</ion-select-option>
+                <ion-select-option value="Push-Ups">Push-Ups</ion-select-option>
+                <ion-select-option value="Seated Cable Rows">Seated Cable Rows</ion-select-option>
+                <ion-select-option value="Sit-Ups">Sit-Ups</ion-select-option>
+                <ion-select-option value="Squats">Squats</ion-select-option>
+                <ion-select-option value="Stretches">Stretches</ion-select-option>
+                <ion-select-option value="Tricep Curls">Tricep Curls</ion-select-option>
+              </ion-select>
+            </ion-item>
+
+            <ion-item lines="none">
+              <ion-input formControlName="sets" type="number" placeholder="Sets" *ngIf="hasSets(i)"></ion-input>
+            </ion-item>
+            <ion-item lines="none">
+              <ion-input formControlName="reps" type="number" placeholder="Repetitions" *ngIf="hasReps(i)"></ion-input>
+            </ion-item>
+            <ion-item lines="none">
+              <ion-input formControlName="weight" type="number" placeholder="Weight (kg)" *ngIf="hasWeight(i)"></ion-input>
+            </ion-item>
+            <ion-item lines="none">
+              <ion-input formControlName="duration" type="number" placeholder="Duration (min)"></ion-input>
+            </ion-item>
+
           </div>
           <ion-button color="danger" type="button" (click)="deleteExercise(i)">
             <ion-icon name="trash"></ion-icon>
@@ -60,10 +71,17 @@
         <ion-button class="adder" type="button" (click)="addExercise()" [disabled]="exercises.length >= 10">
           <ion-icon name="add"></ion-icon>
         </ion-button>
+
       </form>
-      <ion-button class="submit" type="button" (click)="saveExercises()">
-        Save Exercises
-      </ion-button>
+
+        <ion-button
+                class="submit"
+                type="button" (click)="saveExercises()"
+                [disabled]="!IsItvalid()"
+        >
+          Save Exercises
+        </ion-button>
+
     </div>
   </div>
 </ion-content>
