--- a/src/app/pages/messages/chatroom/chatroom.component.html
+++ b/src/app/pages/messages/chatroom/chatroom.component.html
@@ -42,12 +42,17 @@
 <ion-footer class="input-field-footer">
   <ion-item lines="none" class="message-input-field">
     <div class="input-field-wrapper">
-      <ion-textarea autoGrow="true" placeholder="Type a message" [(ngModel)]="message.text"></ion-textarea>
+      <ion-textarea autoGrow="true" rows="1" placeholder="Type a message" [(ngModel)]="message.text"></ion-textarea>
     </div>
-    <ion-fab horizontal="end" vertical ="bottom">
+    <ion-buttons slot="end">
+      <ion-button class="message-send-fab-button default-button" [color]="isText() ? '' : 'medium'" [disabled]="!isText()" (click)="sendMessage()">
+        <ion-icon name="send" class="message-send-icon"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <!-- <ion-fab horizontal="end" vertical ="bottom">
       <ion-fab-button class="message-send-fab-button" [color]="isText() ? '' : 'medium'" [disabled]="!isText()" (click)="sendMessage()">
         <ion-icon name="send" class="message-send-icon"></ion-icon>
       </ion-fab-button>
-    </ion-fab>
+    </ion-fab> -->
   </ion-item>
 </ion-footer>
